# SOZLab

./: .gitignore  CHANGELOG_TUTORIAL.md  CITATION.cff  LICENSE  PUSH_TO_GITHUB.md  README.md  environment.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.venv_docs/: pyvenv.cfg
cli/: __init__.py  sozlab_cli.py
docs/: BUILD_TUTORIAL.md  design_notes.md  developer_guide.md  tutorial.md  user_guide.md
examples/: gromacs_template_project.json  sample_project.json
examples/soz_configs/: shell_and_selection_b.json  shell_only.json
scripts/: build_tutorial_pdf.py  generate_baseline.py
src/app/: __init__.py  main.py  viz_3d.py
src/engine/: __init__.py  analysis.py  export.py  extract.py  logging_utils.py  models.py  preflight.py  report.py  resolver.py  serialization.py  solvent.py  soz_eval.py  stats.py  units.py  validation.py  water_fallbacks.py
tests/: conftest.py  test_analysis.py  test_analysis_reproducibility.py  test_density_compliance.py  test_density_dynamic_selection.py  test_density_quality_invariance.py  test_density_safeguards.py  test_engine.py  test_extract.py  test_gui.py  test_hbond_compliance.py  test_hydration_parallel.py  test_min_distance.py  test_preflight.py  test_probe_system.py  test_project_doctor_refresh.py  test_report_time_units.py  test_selection_terminology_regression.py  test_solvent_pbc.py  test_soz_eval.py  test_stats.py  test_units.py  test_validation.py  test_viz3d_pick_controls.py
tests/integration/: test_cli_smoke.py  test_regression_laao.py  test_wd_fallback.py
